--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,49 @@ body {
 .modalCol {
   color: black;
 }
+
+.delBoton {
+  background-color: rgb(255, 62, 62);
+  border-radius: 13px;
+  font-size: 14px;
+  border: 1px red solid;
+  width: 20px;
+  margin-left: 90%;
+}
+
+.delBoton:hover {
+  background-color: rgb(168, 57, 57);
+  color: white;
+}
+
+.modalForm {
+  color: black;
+  text-align: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.footerModal {
+  justify-content: center;
+}
+
+.headerModal {
+  background-color: rgb(255, 41, 41);
+  font-weight: bold;
+}
+
+.spinnerForm {
+  text-align: center;
+}
+
+.topBar {
+  background-color: rgb(207, 121, 22);
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  border: 1px solid yellow;
+  border-radius: 12px;
+  margin-bottom: 1em;
+}
